Доработка Swagger
Добавлены в swagger след инпоинты :
- SignUp
- SignIn
- GetAllLists
- GetListByID
- CreateList
- UpdateList
- DeleteList
